@@ -1,5 +1,8 @@
 2003-12-31  Ulrich Drepper  <drepper@redhat.com>
 
+	* locale/setlocale.c (setlocale): Avoid duplicating locale names
+	if we can reuse old strings.
+
 	* inet/rcmd.c: Provide better error message in case of unknown
 	host.  Remove USE_IN_LIBIO.
 
